--- a/settings/defaultconfig.json
+++ b/settings/defaultconfig.json
@@ -1,100 +1,228 @@
 {
   "squares": [
     {
-      "color": "red",
+      "color": "#3ecf81",
       "x": 0,
-      "y": 1,
+      "y": 0,
+      "size": {
+        "width": 50,
+        "height": 50
+      },
+      "layer": 1,
+      "name": "background",
+      "config": "",
+      "type": "environment",
+      "number": 1
+    },
+    {
+      "color": "#b5972a",
+      "x": 0,
+      "y": 10,
+      "size": {
+        "width": 30,
+        "height": 3
+      },
+      "layer": 1,
+      "name": "",
+      "config": "",
+      "type": "environment",
+      "number": 2
+    },
+    {
+      "color": "#b5972a",
+      "x": 30,
+      "y": 0,
+      "size": {
+        "width": 3,
+        "height": 50
+      },
+      "layer": 1,
+      "name": "",
+      "config": "",
+      "type": "environment",
+      "number": 3
+    },
+    {
+      "color": "#ccc29d",
+      "x": 19,
+      "y": 6,
       "size": {
         "width": 2,
         "height": 2
       },
       "layer": 1,
-      "name": "chest1",
-      "config": ""
+      "name": "stone",
+      "config": "",
+      "type": "environment",
+      "number": 4
     },
     {
-      "color": "green",
-      "x": 21,
-      "y": 3,
+      "color": "#ccc29d",
+      "x": 24,
+      "y": 17,
       "size": {
-        "width": 1,
-        "height": 1
+        "width": 2,
+        "height": 2
       },
       "layer": 1,
-      "name": "",
-      "config": ""
+      "name": "stone2",
+      "config": "",
+      "type": "environment",
+      "number": 5
     },
     {
-      "color": "#ert",
-      "x": 7,
-      "y": 2,
-      "size": {
-        "width": 5,
-        "height": 5
-      },
-      "layer": 1,
-      "name": "321",
-      "config": ""
-    },
-    {
-      "color": "#eeeee",
-      "x": 30,
-      "y": 2,
-      "size": {
-        "width": 5,
-        "height": 5
-      },
-      "layer": 1,
-      "name": "",
-      "config": ""
-    },
-    {
-      "color": "#FFB841",
-      "x": 22,
-      "y": 7,
-      "size": {
-        "width": 5,
-        "height": 5
-      },
-      "layer": 1,
-      "name": "",
-      "config": ""
-    },
-    {
-      "color": "gray",
-      "x": 11,
-      "y": 4,
-      "size": {
-        "width": 1,
-        "height": 8
-      },
-      "layer": 3,
-      "name": "",
-      "config": ""
-    },
-    {
-      "color": "blue",
-      "x": 20,
-      "y": 0,
-      "size": {
-        "width": 6,
-        "height": 6
-      },
-      "layer": 1,
-      "name": "test",
-      "config": ""
-    },
-    {
-      "color": "gray",
+      "color": "red",
       "x": 3,
       "y": 0,
       "size": {
+        "width": 2,
+        "height": 2
+      },
+      "layer": 1,
+      "name": "",
+      "config": "",
+      "type": "chests",
+      "number": 6
+    },
+    {
+      "color": "red",
+      "x": 26,
+      "y": 7,
+      "size": {
+        "width": 2,
+        "height": 2
+      },
+      "layer": 1,
+      "name": "",
+      "config": "",
+      "type": "chests",
+      "number": 7
+    },
+    {
+      "color": "red",
+      "x": 44,
+      "y": 27,
+      "size": {
+        "width": 2,
+        "height": 2
+      },
+      "layer": 1,
+      "name": "",
+      "config": "",
+      "type": "chests",
+      "number": 8
+    },
+    {
+      "color": "red",
+      "x": 3,
+      "y": 42,
+      "size": {
+        "width": 2,
+        "height": 2
+      },
+      "layer": 1,
+      "name": "",
+      "config": "",
+      "type": "chests",
+      "number": 9
+    },
+    {
+      "color": "green",
+      "x": 30,
+      "y": 0,
+      "size": {
+        "width": 3,
+        "height": 3
+      },
+      "layer": 1,
+      "name": "out1",
+      "config": "",
+      "type": "outs",
+      "number": 10
+    },
+    {
+      "color": "green",
+      "x": 30,
+      "y": 47,
+      "size": {
+        "width": 3,
+        "height": 3
+      },
+      "layer": 1,
+      "name": "out2",
+      "config": "",
+      "type": "outs",
+      "number": 11
+    },
+    {
+      "color": "blue",
+      "x": 47,
+      "y": 9,
+      "size": {
+        "width": 3,
+        "height": 3
+      },
+      "layer": 1,
+      "name": "cage",
+      "config": "",
+      "type": "cages",
+      "number": 12
+    },
+    {
+      "color": "blue",
+      "x": 47,
+      "y": 18,
+      "size": {
+        "width": 3,
+        "height": 3
+      },
+      "layer": 1,
+      "name": "",
+      "config": "",
+      "type": "cages",
+      "number": 13
+    },
+    {
+      "color": "gray",
+      "x": 9,
+      "y": 2,
+      "size": {
         "width": 1,
         "height": 1
       },
-      "layer": 3,
+      "layer": 6,
       "name": "",
-      "config": ""
+      "config": "",
+      "type": "spawn",
+      "number": 14
+    },
+    {
+      "color": "gray",
+      "x": 15,
+      "y": 2,
+      "size": {
+        "width": 1,
+        "height": 1
+      },
+      "layer": 6,
+      "name": "",
+      "config": "",
+      "type": "spawn",
+      "number": 15
+    },
+    {
+      "color": "black",
+      "x": 44,
+      "y": 0,
+      "size": {
+        "width": 5,
+        "height": 5
+      },
+      "layer": 6,
+      "name": "",
+      "config": "",
+      "type": "collision",
+      "number": 16
     }
   ],
   "settings": {
