--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "pixi.js": "^8.6.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "socket.io-client": "^4.8.1"
+    "socket.io-client": "^4.8.1",
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.4",
